syntax = "proto3";

package proto;

option go_package = "github.com/Iksolot21/serverless-task-management/proto";

service NotificationService {
    rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
    string toEmail = 1;
    string subject = 2;
    string body = 3;
}

message SendNotificationResponse {
    bool success = 1;
    string message = 2;
}