syntax = "proto3";

package task;

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
    rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
    rpc GetTaskById(GetTaskByIdRequest) returns (Task);
    rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message CreateTaskRequest {
    int32 userId = 1;
    string title = 2;
    string description = 3;
}

message CreateTaskResponse {
   string message = 1;
}

message GetTasksRequest {
  int32 userId = 1;
}

message GetTasksResponse {
  repeated Task tasks = 1;
}

 message GetTaskByIdRequest {
     int32 id = 1;
     int32 userId = 2;
 }

 message UpdateTaskRequest {
    int32 id = 1;
    int32 userId = 2;
    string title = 3;
   string description = 4;
 }
 message UpdateTaskResponse {
      string message = 1;
 }
   message DeleteTaskRequest {
      int32 id = 1;
     int32 userId = 2;
  }
  message DeleteTaskResponse {
      string message = 1;
  }


message Task {
    int32 id = 1;
    int32 userId = 2;
    string title = 3;
    string description = 4;
}